# essnusb_v3_fw

./: .gitignore  ReadMe.md  build.sh  check_build.sh  env_setup.sh  install_HepRApp.sh  reinstall.sh
framework/: CMakeLists.txt  build.sh  main.cpp  main.in
framework/CMake/: third_party.cmake  toolchain.cmake
framework/core/: CMakeLists.txt  EssCoreLinkDef.h  EssnusbCoreLinkDef.h
framework/core/detector/: EsbDetectorConstructor.cpp  EsbDetectorConstructor.hpp  IDetector.hpp  ISDetector.hpp
framework/core/detectorConstruction/: EsbDetectorConstructor.cpp  IDetector.hpp
framework/core/eve/: EsbEveEventManager.cpp  EsbEveEventManager.hpp  EsbEveManager.cpp  EsbEveManager.hpp  EsbViewerManager.cpp  EsbViewerManager.hpp  IEvent.hpp  ITrack.hpp  ITrackPoint.hpp
framework/core/generator/: EmptyPrimaryGenerator.cpp  EmptyPrimaryGenerator.hpp  IGenerator.cpp  IGenerator.hpp
framework/core/hit/: EsbCoreHit.h  EsbG4Hit.h
framework/core/io/: EsbIO.cpp  EsbIO.hpp  EsbReaderPersistency.cpp  EsbReaderPersistency.hpp  EsbWriterPersistency.cpp  EsbWriterPersistency.hpp
framework/core/physicsList/: CMakeLists.txt  ESSnusbPhysicsList.cpp  ESSnusbPhysicsList.hpp  EmptyPhysicsList.cpp  EmptyPhysicsList.hpp
framework/core/simulation/: EsbActionInitializer.cpp  EsbActionInitializer.hpp  EsbEventAction.cpp  EsbEventAction.hpp  EsbRunAction.cpp  EsbRunAction.hpp  EsbSimManager.cpp  EsbSimManager.hpp
framework/core/task/: EsbTaskManager.cpp  EsbTaskManager.hpp  ITask.hpp
framework/core/vis/: Direct.mac  OpenVis.mac  vis.mac
framework/data/: CMakeLists.txt  DataLinkDef.h
framework/data/EmulsionDetector/: EmulsionDataPoint.cpp  EmulsionDataPoint.hpp
framework/data/NDCherenkov/: NDCherenkovDataPoint.cpp  NDCherenkovDataPoint.hpp
framework/data/SuperFGD/: CMakeLists.txt  DataLinkDef.h  FgdDetectorPoint.cpp  FgdDetectorPoint.cxx  FgdDetectorPoint.h  FgdDetectorPoint.hpp  FgdHit.cpp  FgdHit.cxx  FgdHit.h  FgdHit.hpp
framework/data/WCSim/: WCSimDataPoint.cpp  WCSimDataPoint.hpp
framework/digitizer/: CMakeLists.txt  DigitizerLinkDef.h
framework/digitizer/SuperFGD/: FgdDigitizer.cpp  FgdDigitizer.cxx  FgdDigitizer.h  FgdDigitizer.hpp  FgdMppcDisplay.cpp  FgdMppcDisplay.cxx  FgdMppcDisplay.h  FgdMppcDisplay.hpp
framework/eve/: CMakeLists.txt  EveLinkDef.h
framework/eve/EmulsionDetector/: EveEvent.cpp  EveEvent.hpp
framework/eve/NdCherenkov/: EveEvent.cpp  EveEvent.hpp
framework/eve/SuperFGD/: EveEvent.cpp  EveEvent.hpp
framework/eve/WCSim/: EveEvent.cpp  EveEvent.hpp
framework/generators/: CMakeLists.txt  GeneratorsLinkDef.h
framework/generators/NDCherenkov/: NDSimpleGenerator.cpp  NDSimpleGenerator.h
framework/generators/SuperFGD/: CMakeLists.txt  FgdGenieGenerator.cxx  FgdGenieGenerator.h  FgdGeomAnalyzer.cxx  FgdGeomAnalyzer.h  GeneratorsLinkDef.h  GenieFluxDriver.cxx  GenieFluxDriver.h  GenieGenerator.cpp  GenieGenerator.cxx  GenieGenerator.h  GenieGenerator.hpp
framework/generators/generic/: GenericGenieGenerator.cxx  GenericGenieGenerator.h  GenericGeomAnalyzer.cxx  GenericGeomAnalyzer.h  GenieFluxDriver.cxx  GenieFluxDriver.h  GenieGenerator.cxx  GenieGenerator.h  IFluxNextPosition.h
framework/geometry/: CMakeLists.txt  GeometryLinkDef.h
framework/geometry/EmulsionDetector/: DetectorDefinition.cpp  DetectorDefinition.hpp  EmulsionDetector.cpp  EmulsionDetector.hpp  MagneticField.cpp  MagneticField.hpp  note
framework/geometry/NDCherenkov/: NDCherenkov.cpp  NDCherenkov.hpp
framework/geometry/SuperFGD/: CMakeLists.txt  Cave.cxx  Cave.h  FgdDetector.cxx  FgdDetector.h  VolumesLinkDef.h
framework/geometry/WCSim/: WCSimConstructCylinder.cpp  WCSimConstructEggShapedHyperK.cpp  WCSimConstructGeometryTables.cpp  WCSimConstructMaterials.cpp  WCSimConstructPMT.cpp  WCSimDetectorConfigs.cpp  WCSimEnumerations.cpp  WCSimEnumerations.hpp  WCSimGeometry.cpp  WCSimGeometry.hpp  WCSimLC.cpp  WCSimPMTObject.cpp  WCSimPMTObject.hpp  WCSimPmtInfo.cpp  WCSimRootOptions.cpp  WCSimRootOptions.hpp  WCSimTuningParameters.cpp  WCSimTuningParameters.hpp  WCSimWCDigi.cpp  WCSimWCHit.cpp  WCSimWCPMT.cpp  WCSimWCPMT.hpp
framework/reconstruction/: CMakeLists.txt  ReconLinkDef.h
framework/reconstruction/EsbSuperFGD/: FgdCalorimetric.h  FgdEdepAnalyzer.h  FgdExitData.cxx  FgdExitData.h  FgdExitParticle.cxx  FgdExitParticle.h  FgdGenFitRecon.h  FgdGraphRecord.cxx  FgdGraphStats.cxx  FgdMCEventRecord.cxx  FgdMCLeptonStats.h  FgdReconTemplate.h  FgdTMVAData2.h
framework/reconstruction/Reconstruction/: CMakeLists.txt
framework/reconstruction/SuperFGD/: FgdCalorimetric.cpp  FgdCalorimetric.hpp  FgdEdepAnalyzer.cpp  FgdEdepAnalyzer.cxx  FgdEdepAnalyzer.hpp  FgdExitData.cpp  FgdExitData.hpp  FgdExitParticle.cpp  FgdGenFitRecon.cpp  FgdGenFitRecon.hpp  FgdGraphGenFitRecon.cpp  FgdGraphGenFitRecon.hpp  FgdGraphRecord.cpp  FgdGraphStats.cpp  FgdGraphStats.h  FgdGraphStats.hpp  FgdMCEventRecord.cpp  FgdMCEventRecord.hpp  FgdMCGenFitRecon.cpp  FgdMCGenFitRecon.cxx  FgdMCGenFitRecon.h  FgdMCGenFitRecon.hpp  FgdMCLeptonStats.cpp  FgdMCLeptonStats.hpp  FgdMuonRecon.cpp  FgdMuonRecon.cxx  FgdMuonRecon.hpp  FgdReconHit.cpp  FgdReconTemplate.cpp  FgdReconTemplate.hpp  FgdTMVAData.cpp  FgdTMVAData.hpp  FgdTMVAData2.cpp  FgdTMVAData2.cxx  FgdTMVAData2.h  FgdTMVAData2.hpp  FgdTMVAEventRecord.cpp  PdgFromMomentumLoss.cpp
framework/scripts/: esb_viewer.C  exportGeometry.C  geom_fgd.C  log.txt  rootlogon.C  toGdml.C
framework/scripts/composite/: simulate_1_composite.C  simulate_1_composite_emul.C  simulate_1_composite_fgd.C  simulate_1_composite_fgd_gen.C  simulate_1_composite_wcsim.C  simulate_4_visualize.C
framework/scripts/emulsion/: simulate_1_emulsion.C  simulate_4_visualize.C
framework/scripts/ndcherenkov/: simulate_1_ndcherenkov.C  simulate_1_nu_flux_ndcherenkov.C  simulate_2_process.C  simulate_4_visualize.C
framework/scripts/superfgd/: display_geometry.C  simulate_1_fgd_genie_generator.C  simulate_2_digitize.C  simulate_3_TMVA_data.C  (+4 more)
framework/test/: CMakeLists.txt  TestLinkDef.h
framework/utility/: CMakeLists.txt  Utility.cpp  Utility.hpp  UtilityLinkDef.h
(+120 files in other folders)
